; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_merge.c_git_merge_commits.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_merge.c_git_merge_commits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_merge_commits(i32** %0, i32* %1, i32* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store i32** %0, i32*** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  store i32* null, i32** %11, align 8
  store i32* null, i32** %12, align 8
  store i32* null, i32** %13, align 8
  store i32 0, i32* %14, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @git_annotated_commit_from_commit(i32** %11, i32* %15)
  store i32 %16, i32* %14, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %5
  %19 = load i32*, i32** %9, align 8
  %20 = call i32 @git_annotated_commit_from_commit(i32** %12, i32* %19)
  store i32 %20, i32* %14, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %18, %5
  br label %30

23:                                               ; preds = %18
  %24 = load i32**, i32*** %6, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = load i32*, i32** %11, align 8
  %27 = load i32*, i32** %12, align 8
  %28 = load i32*, i32** %10, align 8
  %29 = call i32 @merge_annotated_commits(i32** %24, i32** %13, i32* %25, i32* %26, i32* %27, i32 0, i32* %28)
  store i32 %29, i32* %14, align 4
  br label %30

30:                                               ; preds = %23, %22
  %31 = load i32*, i32** %11, align 8
  %32 = call i32 @git_annotated_commit_free(i32* %31)
  %33 = load i32*, i32** %12, align 8
  %34 = call i32 @git_annotated_commit_free(i32* %33)
  %35 = load i32*, i32** %13, align 8
  %36 = call i32 @git_annotated_commit_free(i32* %35)
  %37 = load i32, i32* %14, align 4
  ret i32 %37
}

declare dso_local i32 @git_annotated_commit_from_commit(i32**, i32*) #1

declare dso_local i32 @merge_annotated_commits(i32**, i32**, i32*, i32*, i32*, i32, i32*) #1

declare dso_local i32 @git_annotated_commit_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
